--- a/day2/Cargo.toml
+++ b/day2/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "adventofcode"
+name = "day2"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-day1 = { path = "../day1/" }
-day2 = { path = "../day2/" }
+util = { path = "../util/" }
+
