--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,24 @@ members = [
     "day11",
     "util"
 ]
+
+# Alternative setup not using workspace:
+# 
+# in Cargo.toml:
+#
+# [package]
+# ...
+# 
+# [lib]
+# name = "common"
+# path = "src/common/lib.rs"
+# 
+# [[bin]]
+# name = "dayX"
+# path = "src/dayX/main.rs"
+# 
+# ... 
+# 
+# in main.rs of any day:
+# 
+# extern crate common;
