--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [workspace]
 
 members = [
-    "day1",
-    "day2",
-    "day3",
-    "day4",
-    "day11",
-    "day12",
-    "day13",
+    "2021/day1",
+    "2021/day2",
+    "2021/day3",
+    "2021/day4",
+    "2021/day11",
+    "2021/day12",
+    "2021/day13",
     "common"
 ]
