add day3 and fix tests for day4

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ members = [
     "2021/day13",
     "2022/day1_2022",
     "2022/day2_2022",
+    "2022/day3_2022",
     "2022/day4_2022",
     "common"
 ]
