--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,5 +12,7 @@ members = [
     "2022/day2_2022",
     "2022/day3_2022",
     "2022/day4_2022",
+    "2022/day5_2022",
+    "2022/day6_2022",
     "common"
 ]
