add more tinkering for day9

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,5 +16,8 @@ members = [
     "2022/day6_2022",
     "2022/day7_2022",
     "2022/day8_2022",
+    "2022/day9_2022",
+    "2022/day10_2022",
+    "2022/day11_2022",
     "common"
 ]
