add skeleton for day 23

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,5 +29,7 @@ members = [
     "2022/day19_2022",
     "2022/day20_2022",
     "2022/day21_2022",
+    "2022/day22_2022",
+    "2022/day23_2022",
     "common"
 ]
